--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -168,6 +168,7 @@
 
   .popular-collections {
     margin-left: 0;
+
     li {
       min-height: 115px;
       width: 48%;
@@ -205,7 +206,6 @@
       background-position: center;
     }
   }
-
 
   .discover-ww1, .find-an-archive, .popular-tags {
     div {
@@ -303,6 +303,56 @@
           color: #fbe2bc;
         }
 
+      }
+    }
+  }
+
+  @media screen and (max-width: 380px) {
+    .breather {
+      padding-left: 1em !important;
+      width: 80%;
+    }
+
+    .discover-ww1 {
+      .discover-ww1-wrapper {
+        margin-left: 0;
+      }
+
+      div {
+        margin-left: 0;
+      }
+    }
+
+    .find-an-archive {
+      div {
+        margin-left: 0;
+      }
+    }
+
+    .heading-holding-banner {
+      padding-left: 14px;
+    }
+
+    .holding-box {
+      padding-left: 0;
+    }
+
+    .popular-collections {
+      padding-left: 1em;
+      padding-right: 1em;
+
+      li {
+        width: 100%;
+      }
+    }
+
+    .popular-tags {
+      div {
+        margin-left: 0;
+
+        h2, p {
+          padding-left: 0;
+        }
       }
     }
   }
